--- a/src/main.html
+++ b/src/main.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>input[type="search"] Sample</title>
-    <link rel="stylesheet" src="main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
