--- a/src/main.html
+++ b/src/main.html
@@ -9,12 +9,13 @@
 <form action="#" method="get">
     <p>
         <label for="#search_input">What are looking for?</label>
-        <input type="search" placeholder="Please type a query" required />
+        <input type="search" class="input-search" placeholder="Please type a query" required />
     </p>
 </form>
 
+<script src="components/jquery/jquery.min.js"></script>
 <script src="components/modernizr/modernizr.js"></script>
 <script src="js/feature-detection.js"></script>
-<script src="js/main.js"></script>
+<script src="js/searchfield.js"></script>
 </body>
 </html>
