--- a/test/searchfield.html
+++ b/test/searchfield.html
@@ -7,8 +7,13 @@
 </head>
 <body>
 <div id="qunit"></div>
-<div id="qunit-fixture"></div>
+<div id="qunit-fixture">
+    <input type="text" class="searchfield-as-textfield">
+</div>
+<script src="resources/jquery/jquery.min.js"></script>
+<script>jQuery.noConflict();</script>
 <script src="resources/qunit/qunit.js"></script>
+<script src="resources/js/searchfield.js"></script>
 <script src="suite/searchfield.js"></script>
 </body>
 </html>
