--- a/src/main.html
+++ b/src/main.html
@@ -13,8 +13,8 @@
     </p>
 </form>
 
-<script src="components/jquery/jquery.min.js"></script>
-<script src="components/modernizr/modernizr.js"></script>
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/modernizr/modernizr.js"></script>
 <script src="js/feature-detection.js"></script>
 <script src="js/searchfield.js"></script>
 </body>
