--- a/src/main.html
+++ b/src/main.html
@@ -17,6 +17,11 @@
 	<label for="location-input">Where do you live in?</label>
 	<input id="location-input" type="text" class="searchfield-as-textfield" placeholder="City or Country" value="London, UK" />
     </p>
+
+    <p>
+	<label for="origin-input">Where do you come from?</label>
+	<input id="origin-input" type="text" class="searchfield-as-textfield fancy" placeholder="City or Country" value="Bordeaux, France" />
+    </p>
 </form>
 
 <form action="#" method="get" id="absolute-container">
