--- a/src/main.html
+++ b/src/main.html
@@ -13,12 +13,12 @@
 	<input id="search-input" type="search" class="searchfield-as-textfield" placeholder="Please type a query" required />
     </p>
 
-    <p>
+    <p class="position: relative">
 	<label for="location-input">Where do you live in?</label>
 	<input id="location-input" type="text" class="searchfield-as-textfield" placeholder="City or Country" value="London, UK" />
     </p>
 
-    <p>
+    <p style="border: solid 20px pink">
 	<label for="origin-input">Where do you come from?</label>
 	<input id="origin-input" type="text" class="searchfield-as-textfield fancy" placeholder="City or Country" value="Bordeaux, France" />
     </p>
