Making file names consistent w/ plugin name

--- a/src/main.html
+++ b/src/main.html
@@ -36,6 +36,6 @@
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/modernizr/modernizr.js"></script>
 <script src="js/feature-detection.js"></script>
-<script src="js/searchfield.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
