--- a/test/cancel-button.html
+++ b/test/cancel-button.html
@@ -13,7 +13,7 @@
 <script src="resources/jquery/jquery.min.js"></script>
 <script>jQuery.noConflict();</script>
 <script src="resources/qunit/qunit.js"></script>
-<script src="resources/js/searchfield.js"></script>
-<script src="suite/searchfield.js"></script>
+<script src="resources/js/main.js"></script>
+<script src="suite/cancel-button.js"></script>
 </body>
 </html>
